# mysql-walmart-data-model

./: .gitignore  README.md  pyproject.toml
data/final/: customer.csv  order.csv  product.csv
data/raw/: walmart_fuel_stations.csv  walmart_online_grocery_pickup_locations.csv  walmart_sales.csv  walmart_stores.csv
data_profiles/raw/: walmart_product_reviews_profile.html
scripts/: create_tables.sql  ingest_data.sql
src/: process_data.py  profile_data.py
